...

    },
    "Calendar" : {
      "comment" : "The title of the calendar view.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {

    },
    "Cast" : {

    },
    "Categories" : {
...
            "state" : "new",
            "value" : "Delete %1$lld %2$@?"
          }
        }
      }
    },
    "Delete and Remove Files" : {

    },
    "Delete Backup" : {

    },
    "Delete Backup?" : {
...
    "Delete Tag?" : {

    },
    "Delete Torrent" : {

    },
    "Delete Torrent Only" : {

    },
    "Delete Torrent?" : {

    },
    "Descending" : {
...

    },
    "Display Name" : {
      "comment" : "The label for the display name field in a service setup sheet.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {

    },
    "Download" : {

    },
    "Download Client" : {
...
      "comment" : "A heading for the file size limits section of a Quality Profile.",
      "isCommentAutoGenerated" : true
    },
    "Filename blocks" : {

    },
    "Files" : {
      "comment" : "The title of the section that lists the files for a specific episode.",
      "isCommentAutoGenerated" : true
    },
    "Filmography" : {
      "comment" : "A heading for a list of a person's filmography.",
      "isCommentAutoGenerated" : true
...
      "comment" : "The total number of Seerr requests.",
      "isCommentAutoGenerated" : true
    },
    "Total %@" : {

    },
    "Trackers" : {

    },
    "Transcode" : {

    },
    "Transcode Reasons" : {
...
